feat: add main file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ciphering_cli_tool",
   "version": "1.0.0",
   "description": "NodeJS 2021 Q4 task",
-  "main": "index.js",
+  "main": "ciphering.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
